--- a/frontend/app.json
+++ b/frontend/app.json
@@ -36,6 +36,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "googleMapsApiKey": "YOUR_KEY"
     }
   }
 }
