--- a/frontend/app.json
+++ b/frontend/app.json
@@ -32,13 +32,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
     },
-    "extra": {
-      "googleMapsApiKey": "YOUR_KEY"
-    }
+    "newArchEnabled": true
   }
 }
