--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.batch_size=2000
+
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
