--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-location": "~18.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
