--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.4",
     "expo-navigation-bar": "~4.0.5",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "^0.29.16",
@@ -32,6 +33,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.3",
+    "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
@@ -41,8 +43,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "expo-location": "~18.0.4"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
